<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginandSignup.Signup_Screen">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Signup"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="Please enter your details"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/signupname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_text"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/signupemail"
                android:layout_width="match_parent"
                android:layout_height="48dp"

                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text"

                android:ems="10"
                android:hint="@string/enter_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/signuppassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text"
                android:ems="10"
                android:hint="Enter Password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/signupconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="Date of birth"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_text"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/signupphone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text"
                android:ems="10"
                android:hint="Enter Phone"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue"

                android:text="Signup"
                android:textColor="#FFFFFF"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/already_a_member"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/loginret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/login_now"
                android:textColor="@color/blue"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>